# WhatIsUp

./: .env.example  .env.probe.example  .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FEATURES.md  README.md  SECURITY.md  UPGRADING.md  deploy.sh  docker-compose.central-probe.yml  docker-compose.probe.yml  docker-compose.prod.yml  docker-compose.yml  recette.sh
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  mobile-release.yml  release-please.yml  release.yml  security-audit.yml
docs/: LAUNCH_POSTS.md
extension/: background.js  content_script.js  manifest.json
extension/options/: options.html  options.js
extension/popup/: popup.html  popup.js
frontend/: Dockerfile  capacitor.config.json  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.json  sw.js  theme-init.js
frontend/src/: App.vue  main.js  style.css
frontend/tests/: alert_matrix.test.js  asnPalette.test.js  auth.test.js  bulkActionBar.test.js  commandPalette.test.js  composables.test.js  emptyState.test.js  (+10 more)
mobile/: Dockerfile  build.sh
nginx/: whatisup.conf
probe/: .env.example  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
probe/tests/: __init__.py  conftest.py  test_checker.py  test_config.py  test_dns_consistency.py  test_health.py  test_http_checker_headers.py  test_public_ip.py  test_registry.py  test_ssl_advanced.py  test_ssrf.py  test_tls_audit.py
probe/whatisup_probe/: __init__.py  checker.py  config.py  diagnostics.py  main.py  public_ip.py  reporter.py  scheduler.py
probe/whatisup_probe/checkers/: __init__.py  _shared.py  base.py  dns.py  domain_expiry.py  http.py  ping.py  scenario.py  smtp.py  tcp.py  udp.py
server/: .env.example  Dockerfile  Dockerfile.dev  Dockerfile.recette  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 283efc2c973a_add_probe_groups.py  394eaf748eaf_merge_v032_features.py  73c722e67eee_dns_split_enabled_remove_consistency.py  76f1c42af699_initial.py  a0b1c2d3e4f5_alertrule_owner_required.py  a1b2c3d4e5f6_add_signal_channel_type.py  a1b2c3d4e5f6_v020_enrichment.py  a2b3c4d5e6f7_user_api_keys.py  a3b4c5d6e7f8_add_network_scope_to_monitor.py  a7b8c9d0e1f2_slo.py  add_data_retention_days.py  b2c3d4e5f6a7_v030_scenario.py  b2c3d4e5f6g7_flapping_storm_baseline.py  b3c4d5e6f7a8_merge_heads.py  b4c5d6e7f8a9_add_oidc_sub_to_user.py  b8c9d0e1f2a3_status_subscriptions.py  c1d2e3f4a5b6_monitor_dependencies_incident_groups.py  c1d2e3f4a5b7_add_system_settings.py  c3d4e5f6a7b8_v031_heartbeat.py  c5d6e7f8a9b0_check_results_brin.py  c9d0e1f2a3b4_custom_metrics.py  d1e2f3a4b5c6_probe_network_type.py  d2e3f4a5b6c7_dns_drift_composite_monitor.py  d4e5f6a7b8c9_v031_annotations.py  d61cfbdf8a24_add_can_create_monitors.py  d6e7f8a9b0c1_add_user_timezone.py  e1f2a3b4c5d6_new_check_types.py  e358d5d5ca4d_merge_v0110.py  e3f4a5b6c7d8_alert_rule_enabled.py  e5f6a7b8c9d0_digest_oncall.py  e7f8a9b0c1d2_add_incident_snooze_until.py  f0a1b2c3d4e5_add_web_push_subscriptions.py  f6a7b8c9d0e1_advanced_assertions.py  f8a9b0c1d2e3_add_alert_silences.py  g0h1i2j3k4l5_merge_heads.py  g9h0i1j2k3l4_v202_network_intelligence.py  h0i1j2k3l4m5_alert_suppress_partition.py  h1i2j3k4l5m6_v033_innovative_features.py  i1j2k3l4m5n6_smart_alerts_correlations.py  j2k3l4m5n6o7_probe_self_reported_ip.py  (+20 more)
server/tests/: __init__.py  conftest.py  recette.py  test_admin.py  test_alert_channels_chat.py  test_alert_channels_schemas.py  test_alert_partition_suppress.py  test_alert_service.py  test_alerts.py  test_auth.py  test_bgp_lookup.py  test_channel_registry.py  test_config_sync.py  test_cors_mobile.py  test_diagnostics.py  test_fcm.py  test_groups.py  test_incident_correlation.py  test_incident_improvements.py  test_incident_service.py  test_incident_timeline.py  test_monitors.py  test_monitors_custom_headers.py  test_monitors_ssl_advanced.py  test_network_verdict.py  test_oidc.py  test_onboarding.py  test_probe_enrichment.py  test_probes.py  test_rate_limit_distributed.py  test_silences.py  test_smart_alerts.py  test_tags.py  test_teams.py  test_uptime_consensus.py
server/whatisup/: __init__.py  init_data.py  main.py
server/whatisup/api/: deps.py
server/whatisup/api/v1/: admin.py  alerts.py  api_keys.py  audit.py  auth.py  bgp.py  config.py  devices.py  extension.py  groups.py  incident_updates.py  incidents.py  incidents_list.py  maintenance.py  metrics.py  monitors.py  onboarding.py  ping.py  probes.py  public.py  silences.py  status.py  tags.py  teams.py  templates.py  tls_fleet.py  web_push.py  ws.py
server/whatisup/core/: config.py  database.py  limiter.py  middleware.py  redis.py  security.py
server/whatisup/models/: __init__.py  alert.py  alert_matrix_template.py  annotation.py  api_key.py  audit_log.py  base.py  correlation_pattern.py  custom_metric.py  device_token.py  digest_window.py  incident.py  incident_diagnostic.py  incident_update.py  maintenance.py  monitor.py  monitor_template.py  probe.py  probe_group.py  result.py  silence.py  status_subscription.py  system_settings.py  tag.py  team.py  user.py  web_push.py
server/whatisup/schemas/: alert.py  alert_matrix_template.py  annotation.py  api_key.py  audit_log.py  incident.py  maintenance.py  monitor.py  probe.py  probe_group.py  result.py  silence.py  tag.py  team.py  template.py  user.py  web_push.py
server/whatisup/services/: alert.py  alert_matrix_preview.py  alert_matrix_templates.py  alert_presets.py  anomaly.py  audit.py  composite.py  config_sync.py  correlation.py  diagnostics.py  dns.py  fcm.py  heartbeat.py  incident.py  maintenance.py  network_verdict.py  probe_enrichment.py  renotify.py  reports.py  retention.py  stats.py  threshold_advisor.py  web_push.py
server/whatisup/services/channels/: __init__.py  _helpers.py  base.py  discord.py  email.py  fcm.py  mattermost.py  opsgenie.py  pagerduty.py  signal.py  slack.py  teams.py  telegram.py  webhook.py
(+115 files in other folders)
